--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: lightblue;
+    background-color: rgba(0, 0, 0, 0.747);
 }
 
 .box {
@@ -17,71 +17,50 @@ body{
 
 h2{
     text-align: center;
-    font-size: 40px;
+    margin-bottom: 20px;
+    font-size: 30px;
     margin-top: 10px;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: rgba(0, 0, 0, 0.815);
 }
 
 p{
     background-color: gray;
     text-align: center;
-    font-size: 25px;
-    color: whitesmoke;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
     margin-top: 10px;
 }
 
-input {
-    background-color: gray;
+input{
+    background-color: black;
     color: white;
-    padding: 15px 32px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-radius: 50px;
     text-align: center;
-    text-decoration: none;
-    font-size: 18px;
-    margin-top: 10px;
+    font-size: 20px;
 }
 
-img{
-    margin-top: 10px;
+
+.seccionEscudos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/* MOBILE */
-
-@media (max-width:720px){
-
-    body{
-        background-color: lightgreen;
-    }
-
-    img{
-        display: none;
-    }
-
-    h2{
-        font-size: 40px;
-    }
-
-    p{
-        font-size: 25px;
-    }
-
+.botones{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (max-width:510px){
-
-    body{
-        background-color: lightcoral;
-    }
-
-    img{
-        display: none;
-    }
-
-    h2{
-        font-size: 32px;
-    }
-
-    p{
-        font-size: 20px;
-    }
+.escudos{
+    display: flex;
+    background-color: white;
+    color: black;
+    border-radius: 0;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    font-family: Arial, Helvetica, sans-serif;
 }
