--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,211 @@
-* {
+/* Importación de fuentes */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,700&display=swap');
+
+/* Genero el reset universal */
+*{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    padding:0;
+    font-family: 'Roboto';
 }
 
 body{
-    background-color: rgba(0, 0, 0, 0.747);
+    background-color: cornsilk;
 }
-
-.box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+header{
+    background: url(../assets/img/headerPokemon.jpg);
+    background-size: cover;
+    background-position: 0px 175px;
+    height: 100px;
+    text-shadow: 1px 1px 5px black;
 }
-
-h2{
+header h1{
     text-align: center;
-    margin-bottom: 20px;
-    font-size: 30px;
-    margin-top: 10px;
-    background-color: white;
-    color: rgba(0, 0, 0, 0.815);
-}
-
-p{
-    background-color: gray;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-    margin-top: 10px;
-}
-
-input{
-    background-color: black;
+    font-size: 35px;
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border-radius: 50px;
+    padding: 30px 0;
+}
+.contenedor{
+    max-width: 1200px;
+    padding: 10px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    contain: paint;
+}
+/* Sección contenedor de items */
+.contenedor .contenedor-items{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-gap:30px;
+    grid-row-gap: 30px;
+    width: 100%;
+    transition: .3s;
+}
+.contenedor .contenedor-items .item{
+    max-width: 200px;
+    margin: auto;
+    border: 5px solid black;
+    border-radius: 2px;
+    padding: 10px;
+    transition: .2s;
+}
+.contenedor .contenedor-items .item .img-item{
+    width: 90%;
+}
+.contenedor .contenedor-items .item:hover{
+    box-shadow: 0 0 10px orangered;
+    scale: 1.10;
+}
+.contenedor .contenedor-items .item .titulo-item{
+    display: block;
+    font-weight: 500;
     text-align: center;
-    font-size: 20px;
+    text-transform: uppercase;
+}
+.contenedor .contenedor-items .item .precio-item{
+    display: block;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
 }
 
-
-.seccionEscudos{
+.contenedor .contenedor-items .item .boton-item{
+    display: block;
+    margin: 10px auto;
+    border: 2px;
+    background-color: orangered;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+/* Sección carrito */
+.carrito{
+    border: 1px solid black;
+    width: 32%;
+    margin-top: 20px;
+    border-radius: 2px;
+    overflow: hidden;
+    margin-bottom: auto;
+    position: sticky !important;
+    top: 0;
+    transition: .3s;
+    margin-right: -100%;
+    opacity: 0;
+}
+.carrito .header-carrito{
+    background-color: orangered;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+.carrito .carrito-item{
     display: flex;
-    justify-content: center;
     align-items: center;
+    position: relative;
+    border-bottom: 1px solid black;
+    padding: 10px;
 }
-
-.botones{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.carrito .carrito-item img{
+    margin-right: 20px;
 }
-
-.escudos{
-    display: flex;
-    background-color: white;
-    color: black;
-    border-radius: 0;
+.carrito .carrito-item .carrito-item-titulo{
+    display: block;
+    font-weight: 500;
     margin-bottom: 10px;
-    letter-spacing: 2px;
-    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
 }
+.carrito .carrito-item .selector-cantidad{
+    display: inline-block;
+    margin-right: 25px;
+}
+.carrito .carrito-item .carrito-item-cantidad{
+    border: none;
+    font-size: 18px;
+    background-color: transparent;
+    display: inline-block;
+    width:30px;
+    padding: 5px;
+    text-align: center;
+}
+.carrito .carrito-item .selector-cantidad i{
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid black;
+    cursor: pointer;
+}
+.carrito .carrito-item .carrito-item-precio{
+    font-weight: bold;
+    display: inline-block;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.carrito .carrito-item .btn-eliminar{
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    color: black;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid black;
+    cursor: pointer;
+    display: block;
+    background: transparent;
+    z-index: 20;
+}
+.carrito .carrito-item .btn-eliminar i{
+    pointer-events: none;
+}
+
+.carrito-total{
+    background-color: orangered;
+    padding: 10px;
+}
+.carrito-total .fila{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.carrito-total .btn-pagar{
+    display: block;
+    width: 100%;
+    border: none;
+    background: black;
+    color: white;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: .3s;
+}
+.carrito-total .btn-pagar:hover{
+    scale: 1.05;
+}
+
+/* Sección Responsive */
+@media screen and (max-width: 850px) {
+    .contenedor {
+      display: block;
+    }
+    .contenedor-items{
+        width: 100% !important;
+    }
+    .carrito{
+        width: 100%;
+    }
+  }
